better docstrings with help from chatGPT

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -38,7 +38,7 @@
        ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
        ">                    gpu:int=0, magface=False, extended=True)\n",
        "\n",
-       "A (forensic) face comparison tool\n",
+       "Class for processing facial images to extract useful features for forensic analysis.\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -59,7 +59,7 @@
        ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
        ">                    gpu:int=0, magface=False, extended=True)\n",
        "\n",
-       "A (forensic) face comparison tool\n",
+       "Class for processing facial images to extract useful features for forensic analysis.\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -191,20 +191,40 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L282){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L381){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
-       ">      ForensicFace.compare (img1path:str, img2path:str)"
+       ">      ForensicFace.compare (img1path:str, img2path:str)\n",
+       "\n",
+       "Compares the similarity between two face images based on their embeddings.\n",
+       "\n",
+       "Parameters:\n",
+       "    - img1path (str): Path to the first image file\n",
+       "    - img2path (str): Path to the second image file\n",
+       "\n",
+       "Returns:\n",
+       "    A float representing the similarity score between the two faces based on their embeddings.\n",
+       "    The score ranges from -1.0 to 1.0, where 1.0 represents a perfect match and -1.0 represents a complete mismatch."
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L282){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L381){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
-       ">      ForensicFace.compare (img1path:str, img2path:str)"
+       ">      ForensicFace.compare (img1path:str, img2path:str)\n",
+       "\n",
+       "Compares the similarity between two face images based on their embeddings.\n",
+       "\n",
+       "Parameters:\n",
+       "    - img1path (str): Path to the first image file\n",
+       "    - img2path (str): Path to the second image file\n",
+       "\n",
+       "Returns:\n",
+       "    A float representing the similarity score between the two faces based on their embeddings.\n",
+       "    The score ranges from -1.0 to 1.0, where 1.0 represents a perfect match and -1.0 represents a complete mismatch."
       ]
      },
      "execution_count": 2,
@@ -258,20 +278,42 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L294){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L404){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
-       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)"
+       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)\n",
+       "\n",
+       "Aggregates multiple embeddings into a single embedding.\n",
+       "\n",
+       "Args:\n",
+       "    embeddings (numpy.ndarray): A 2D array of shape (num_embeddings, embedding_dim) containing the embeddings to be\n",
+       "        aggregated.\n",
+       "    weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
+       "        to each embedding. If not provided, all embeddings are equally weighted.\n",
+       "\n",
+       "Returns:\n",
+       "    numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding."
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L294){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L404){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
-       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)"
+       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)\n",
+       "\n",
+       "Aggregates multiple embeddings into a single embedding.\n",
+       "\n",
+       "Args:\n",
+       "    embeddings (numpy.ndarray): A 2D array of shape (num_embeddings, embedding_dim) containing the embeddings to be\n",
+       "        aggregated.\n",
+       "    weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
+       "        to each embedding. If not provided, all embeddings are equally weighted.\n",
+       "\n",
+       "Returns:\n",
+       "    numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding."
       ]
      },
      "execution_count": 3,
@@ -295,20 +337,38 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L303){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L425){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
-       ">      ForensicFace.aggregate_from_images (list_of_image_paths)"
+       ">      ForensicFace.aggregate_from_images (list_of_image_paths)\n",
+       "\n",
+       "Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
+       "\n",
+       "Args:\n",
+       "    list_of_image_paths (List[str]): List of paths to images.\n",
+       "\n",
+       "Returns:\n",
+       "    Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
+       "    average embedding. Otherwise, returns an empty list."
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L303){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L425){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
-       ">      ForensicFace.aggregate_from_images (list_of_image_paths)"
+       ">      ForensicFace.aggregate_from_images (list_of_image_paths)\n",
+       "\n",
+       "Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
+       "\n",
+       "Args:\n",
+       "    list_of_image_paths (List[str]): List of paths to images.\n",
+       "\n",
+       "Returns:\n",
+       "    Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
+       "    average embedding. Otherwise, returns an empty list."
       ]
      },
      "execution_count": 4,
@@ -415,13 +475,25 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L343){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
        ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
        ">                                  every_n_frames:int=1, margin:float=2.0,\n",
        ">                                  start_from:float=0.0)\n",
+       "\n",
+       "Extracts faces from a video and saves them as individual images.\n",
+       "\n",
+       "Parameters:\n",
+       "    video_path (str): The path to the input video file.\n",
+       "    dest_folder (str, optional): The path to the output folder. If not provided, a new folder with the same name as the input video file is created.\n",
+       "    every_n_frames (int, optional): Extract faces from every n-th frame. Default is 1 (extract faces from all frames).\n",
+       "    margin (float, optional): The factor by which the detected face bounding box should be extended. Default is 2.0.\n",
+       "    start_from (float, optional): The time point (in seconds) after which the video frames should be processed. Default is 0.0.\n",
+       "\n",
+       "Returns:\n",
+       "    The number of extracted faces.\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -434,13 +506,25 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L343){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
        ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
        ">                                  every_n_frames:int=1, margin:float=2.0,\n",
        ">                                  start_from:float=0.0)\n",
+       "\n",
+       "Extracts faces from a video and saves them as individual images.\n",
+       "\n",
+       "Parameters:\n",
+       "    video_path (str): The path to the input video file.\n",
+       "    dest_folder (str, optional): The path to the output folder. If not provided, a new folder with the same name as the input video file is created.\n",
+       "    every_n_frames (int, optional): Extract faces from every n-th frame. Default is 1 (extract faces from all frames).\n",
+       "    margin (float, optional): The factor by which the detected face bounding box should be extended. Default is 2.0.\n",
+       "    start_from (float, optional): The time point (in seconds) after which the video frames should be processed. Default is 0.0.\n",
+       "\n",
+       "Returns:\n",
+       "    The number of extracted faces.\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
