--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -44,7 +44,9 @@
    "source": [
     "# | export\n",
     "class ForensicFace:\n",
-    "    \"A (forensic) face comparison tool\"\n",
+    "    \"\"\"\n",
+    "    Class for processing facial images to extract useful features for forensic analysis.\n",
+    "    \"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -55,6 +57,17 @@
     "        magface=False,\n",
     "        extended=True,\n",
     "    ):\n",
+    "        \"\"\"\n",
+    "        A face comparison tool for forensic analysis and comparison of facial images.\n",
+    "\n",
+    "        Args:\n",
+    "        - model (str): The name of the face recognition model to use (default: \"sepaelv2\").\n",
+    "        - det_size (int): The size of the input images for face detection (default: 320).\n",
+    "        - use_gpu (bool): Whether to use a GPU for inference (default: True).\n",
+    "        - gpu (int): The ID of the GPU to use (default: 0).\n",
+    "        - magface (bool): Whether to use MagFace for face recognition (default: False).\n",
+    "        - extended (bool): Whether to use extended modules (detection, landmark_3d_68, genderage) (default: True).\n",
+    "        \"\"\"\n",
     "        self.extended = extended\n",
     "        if self.extended == True:\n",
     "            allowed_modules = [\"detection\", \"landmark_3d_68\", \"genderage\"]\n",
@@ -104,20 +117,43 @@
     "            )\n",
     "\n",
     "    def _to_input_ada(self, aligned_bgr_img):\n",
+    "        \"\"\"\n",
+    "        Preprocesses the input face for the face recognition model.\n",
+    "\n",
+    "        Args:\n",
+    "            face: Face image as a numpy array in BGR order.\n",
+    "\n",
+    "        Returns:\n",
+    "            Preprocessed face image as a numpy array.\n",
+    "        \"\"\"\n",
     "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
     "        _aligned_bgr_img = ((_aligned_bgr_img / 255.0) - 0.5) / 0.5\n",
     "        return _aligned_bgr_img.transpose(2, 0, 1).reshape(1, 3, 112, 112)\n",
     "\n",
     "    def _to_input_mag(self, aligned_bgr_img):\n",
+    "        \"\"\"\n",
+    "        Preprocesses the input face for the MagFace model.\n",
+    "\n",
+    "        Args:\n",
+    "            face: Face image as a numpy array in BGR order.\n",
+    "\n",
+    "        Returns:\n",
+    "            Preprocessed face image as a numpy array.\n",
+    "        \"\"\"\n",
     "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
     "        _aligned_bgr_img = _aligned_bgr_img / 255.0\n",
     "        return _aligned_bgr_img.transpose(2, 0, 1).reshape(1, 3, 112, 112)\n",
     "\n",
     "    def get_most_central_face(self, img, faces):\n",
     "        \"\"\"\n",
-    "        faces is a insightface object with keypoints and bounding_box\n",
+    "        Get the keypoints of the most central face in an image.\n",
     "\n",
-    "        return: keypoints of the most central face\n",
+    "        Args:\n",
+    "            img: Input image as a numpy array.\n",
+    "            faces: An insightface object with keypoints and bounding_box.\n",
+    "\n",
+    "        Returns:\n",
+    "            Tuple containing the index of the most central face and its keypoints.\n",
     "        \"\"\"\n",
     "        assert faces is not None\n",
     "        img_center = np.array([img.shape[0] // 2, img.shape[1] // 2])\n",
@@ -135,9 +171,14 @@
     "\n",
     "    def get_larger_face(self, img, faces):\n",
     "        \"\"\"\n",
-    "        faces is a insightface object with keypoints and bounding_box\n",
+    "        Get the keypoints of the larger face in an image.\n",
     "\n",
-    "        return: keypoints of the larger face\n",
+    "        Args:\n",
+    "            img: Input image as a numpy array.\n",
+    "            faces: An insightface object with keypoints and bounding_box.\n",
+    "\n",
+    "        Returns:\n",
+    "            Tuple containing the index of the larger face and its keypoints.\n",
     "        \"\"\"\n",
     "        assert faces is not None\n",
     "        areas = []\n",
@@ -153,21 +194,49 @@
     "\n",
     "    def process_image_single_face(self, imgpath: str):  # Path to image to be processed\n",
     "        \"\"\"\n",
-    "        Process image and returns dict with:\n",
+    "        Process a an image considering it has a single face and extract useful features for forensic analysis.\n",
     "\n",
-    "        - keypoints: 5 facial points (left eye, right eye, nose tip, left mouth corner and right mouth corner)\n",
+    "        Args:\n",
+    "            imgpath: Path to the input image.\n",
     "\n",
-    "        - ipd: interpupillary distance\n",
+    "        Returns:\n",
+    "            A dictionary containing the following keys:\n",
+    "                - 'keypoints': A 2D numpy array of shape (5, 2) containing the facial keypoints\n",
+    "                        for each face in the image. The keypoints are ordered as follows:\n",
+    "                       left eye, right eye, nose tip, left mouth corner, and right mouth corner.\n",
     "\n",
-    "        - pitch, yaw, roll angles\n",
+    "                - 'ipd': A float representing the inter-pupillary distance for each face in the image.\n",
     "\n",
-    "        - normalized_embedding\n",
+    "                - 'embedding': A 1D numpy array of shape (512,) containing the facial embedding\n",
+    "                       for each face in the image.\n",
     "\n",
-    "        - embedding_norm\n",
+    "                - 'norm': A float representing the L2 norm of the embedding for each face in the image.\n",
     "\n",
-    "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
+    "                - 'bbox': A 1D numpy array of shape (4,) containing the bounding box coordinates for each face\n",
+    "                  in the image. The coordinates are ordered as follows: (xmin, ymin, xmax, ymax).\n",
     "\n",
-    "        - (optional) magface norm and magface features\n",
+    "                - 'aligned_face': A 3D numpy array of shape (H, W, C) in RGB order containing the aligned face image for\n",
+    "                          each face in the image. The image has been cropped and aligned based on the\n",
+    "                          facial keypoints.\n",
+    "\n",
+    "                If the 'extended' attribute is set to True, the dictionary will also contain the following keys:\n",
+    "                - 'gender': A string representing the gender for each face in the image.\n",
+    "                               Possible values are 'M' for male and 'F' for female.\n",
+    "\n",
+    "                - 'age': An integer representing the estimated age for each face in the image.\n",
+    "\n",
+    "                - 'pitch': A float representing the pitch angle for each face in the image.\n",
+    "\n",
+    "                - 'yaw': A float representing the yaw angle for each face in the image.\n",
+    "\n",
+    "                - 'roll': A float representing the roll angle for each face in the image.\n",
+    "\n",
+    "                If the 'magface' attribute is set to True, the dictionary will also contain the following keys:\n",
+    "                - 'magface_embedding': A 1D numpy array of shape (512,) containing the magface\n",
+    "                                          embedding for each face in the image.\n",
+    "\n",
+    "                - 'magface_norm': A float representing the L2 norm of the magface embedding for\n",
+    "                                     each face in the image.\n",
     "        \"\"\"\n",
     "        if type(imgpath) == str:  # image path passed as argument\n",
     "            bgr_img = cv2.imread(imgpath)\n",
@@ -234,21 +303,51 @@
     "        imgpath: str,  # Path to image to be processed\n",
     "    ):\n",
     "        \"\"\"\n",
-    "        Process image and returns list of dicts with:\n",
+    "        Process an image with one or multiple faces and returns a list of dictionaries\n",
+    "        with the following keys:\n",
     "\n",
-    "        - keypoints: 5 facial points (left eye, right eye, nose tip, left mouth corner and right mouth corner)\n",
+    "            - 'keypoints': A 2D numpy array of shape (5, 2) containing the facial keypoints\n",
+    "                            for each face in the image. The keypoints are ordered as follows:\n",
+    "                            left eye, right eye, nose tip, left mouth corner, and right mouth corner.\n",
     "\n",
-    "        - ipd: interpupillary distance\n",
+    "            - 'ipd': A float representing the inter-pupillary distance for each face in the image.\n",
     "\n",
-    "        - pitch, yaw, roll angles\n",
+    "            - 'embedding': A 1D numpy array of shape (512,) containing the facial embedding\n",
+    "                            for each face in the image.\n",
     "\n",
-    "        - normalized_embedding\n",
+    "            - 'norm': A float representing the L2 norm of the embedding for each face in the image.\n",
     "\n",
-    "        - embedding_norm\n",
+    "            - 'bbox': A 1D numpy array of shape (4,) containing the bounding box coordinates for each face\n",
+    "                        in the image. The coordinates are ordered as follows: (xmin, ymin, xmax, ymax).\n",
     "\n",
-    "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
+    "            - 'aligned_face': A numpy array of shape (112, 112, 3) in RGB order containing the aligned face image for\n",
+    "                                each face in the image. The image has been cropped and aligned based on the\n",
+    "                                facial keypoints.\n",
     "\n",
-    "        - (optional) magface norm and magface features\n",
+    "         If the 'extended' attribute is set to True, the dictionaries will also contain the following keys:\n",
+    "            - 'gender': A string representing the sex for each face in the image.\n",
+    "                        Possible values are 'M' for male and 'F' for female.\n",
+    "\n",
+    "            - 'age': An integer representing the estimated age for each face in the image.\n",
+    "\n",
+    "            - 'pitch': A float representing the pitch angle for each face in the image.\n",
+    "\n",
+    "            - 'yaw': A float representing the yaw angle for each face in the image.\n",
+    "\n",
+    "            - 'roll: A float representing the roll angle for each face in the image.\n",
+    "\n",
+    "         If the 'magface' attribute is set to True, the dictionary will also contain the following keys:\n",
+    "            - 'magface_embedding': A 1D numpy array of shape (512,) containing the magface\n",
+    "                                    embedding for each face in the image.\n",
+    "\n",
+    "            - 'magface_norm': A float representing the L2 norm of the magface embedding for\n",
+    "                                each face in the image.\n",
+    "\n",
+    "        Args:\n",
+    "            - imgpath (str): The file path to the image to be processed.\n",
+    "\n",
+    "        Returns:\n",
+    "            - A list of dictionaries, with each dictionary representing a face in the image.\n",
     "        \"\"\"\n",
     "        if type(imgpath) == str:  # image path passed as argument\n",
     "            bgr_img = cv2.imread(imgpath)\n",
@@ -406,10 +505,21 @@
     "# | export\n",
     "@patch\n",
     "def compare(self: ForensicFace, img1path: str, img2path: str):\n",
+    "    \"\"\"\n",
+    "    Compares the similarity between two face images based on their embeddings.\n",
+    "\n",
+    "    Parameters:\n",
+    "        - img1path (str): Path to the first image file\n",
+    "        - img2path (str): Path to the second image file\n",
+    "\n",
+    "    Returns:\n",
+    "        A float representing the similarity score between the two faces based on their embeddings.\n",
+    "        The score ranges from -1.0 to 1.0, where 1.0 represents a perfect match and -1.0 represents a complete mismatch.\n",
+    "    \"\"\"\n",
     "    img1data = self.process_image(img1path)\n",
-    "    assert len(img1data) > 0\n",
+    "    assert len(img1data) > 0, f\"No face detected in {img1path}\"\n",
     "    img2data = self.process_image(img2path)\n",
-    "    assert len(img2data) > 0\n",
+    "    assert len(img2data) > 0, f\"No face detected in {img2path}\"\n",
     "    return np.dot(img1data[\"embedding\"], img2data[\"embedding\"]) / (\n",
     "        img1data[\"norm\"] * img2data[\"norm\"]\n",
     "    )\n"
@@ -452,6 +562,18 @@
     "# | export\n",
     "@patch\n",
     "def aggregate_embeddings(self: ForensicFace, embeddings, weights=None):\n",
+    "    \"\"\"\n",
+    "    Aggregates multiple embeddings into a single embedding.\n",
+    "\n",
+    "    Args:\n",
+    "        embeddings (numpy.ndarray): A 2D array of shape (num_embeddings, embedding_dim) containing the embeddings to be\n",
+    "            aggregated.\n",
+    "        weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
+    "            to each embedding. If not provided, all embeddings are equally weighted.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding.\n",
+    "    \"\"\"\n",
     "    if weights is None:\n",
     "        weights = np.ones(embeddings.shape[0], dtype=\"int\")\n",
     "    assert embeddings.shape[0] == weights.shape[0]\n",
@@ -467,6 +589,16 @@
     "# | export\n",
     "@patch\n",
     "def aggregate_from_images(self: ForensicFace, list_of_image_paths):\n",
+    "    \"\"\"\n",
+    "    Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
+    "\n",
+    "    Args:\n",
+    "        list_of_image_paths (List[str]): List of paths to images.\n",
+    "\n",
+    "    Returns:\n",
+    "        Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
+    "        average embedding. Otherwise, returns an empty list.\n",
+    "    \"\"\"\n",
     "    embeddings = []\n",
     "    weights = []\n",
     "    for imgpath in list_of_image_paths:\n",
@@ -569,6 +701,17 @@
     "\n",
     "@patch\n",
     "def _get_extended_bbox(self: ForensicFace, bbox, frame_shape, margin_factor):\n",
+    "    \"\"\"\n",
+    "    Computes and returns the bounding box with extended margins.\n",
+    "\n",
+    "    Parameters:\n",
+    "        bbox (ndarray): The bounding box coordinates (startX, startY, endX, endY).\n",
+    "        frame_shape (tuple): The shape of the video frame (height, width, channels).\n",
+    "        margin_factor (float): The factor to be applied for computing the margin.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list with the coordinates of the extended bounding box (startX_out, startY_out, endX_out, endY_out).\n",
+    "    \"\"\"\n",
     "    # add a margin on the bounding box\n",
     "    (startX, startY, endX, endY) = bbox.astype(\"int\")\n",
     "    (h, w) = frame_shape[:2]\n",
@@ -601,6 +744,19 @@
     "    margin: float = 2.0,  # margin to add to each face, w.r.t. detected bounding box\n",
     "    start_from: float = 0.0,  # seconds after video start to begin processing\n",
     "):\n",
+    "    \"\"\"\n",
+    "    Extracts faces from a video and saves them as individual images.\n",
+    "\n",
+    "    Parameters:\n",
+    "        video_path (str): The path to the input video file.\n",
+    "        dest_folder (str, optional): The path to the output folder. If not provided, a new folder with the same name as the input video file is created.\n",
+    "        every_n_frames (int, optional): Extract faces from every n-th frame. Default is 1 (extract faces from all frames).\n",
+    "        margin (float, optional): The factor by which the detected face bounding box should be extended. Default is 2.0.\n",
+    "        start_from (float, optional): The time point (in seconds) after which the video frames should be processed. Default is 0.0.\n",
+    "        \n",
+    "    Returns:\n",
+    "        The number of extracted faces.\n",
+    "    \"\"\"\n",
     "    if dest_folder is None:\n",
     "        dest_folder = os.path.splitext(video_path)[0]\n",
     "\n",
