add quality assessment by CR-FIQA

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -113,25 +113,27 @@
    "metadata": {
     "language": "python"
    },
+   "outputs": [],
+   "source": [
+    "ff.process_image_single_face(\"001_frontal.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll']),\n",
-       " array([[471.42743, 418.60498],\n",
-       "        [522.68933, 418.05362],\n",
-       "        [498.82196, 449.08923],\n",
-       "        [479.3499 , 476.44193],\n",
-       "        [514.33453, 476.06885]], dtype=float32),\n",
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
+       " array([[471.42807, 418.60446],\n",
+       "        [522.6901 , 418.05377],\n",
+       "        [498.82306, 449.08896],\n",
+       "        [479.34985, 476.44186],\n",
+       "        [514.3342 , 476.06934]], dtype=float32),\n",
        " array([441, 355, 548, 506]))"
       ]
      },
@@ -191,7 +193,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L381){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L405){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -210,7 +212,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L381){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L405){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -278,7 +280,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L404){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L428){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -298,7 +300,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L404){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L428){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -337,7 +339,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L425){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L449){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -355,7 +357,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L425){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L449){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -475,7 +477,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L510){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
@@ -506,7 +508,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L486){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L510){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
