--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -78,6 +78,8 @@
     "\n",
     "        self.magface = magface\n",
     "\n",
+    "        self.model = model\n",
+    "\n",
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
     "            allowed_modules=allowed_modules,\n",
@@ -110,6 +112,19 @@
     "                    model,\n",
     "                    \"magface\",\n",
     "                    \"magface_iresnet100.onnx\",\n",
+    "                ),\n",
+    "                providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
+    "                if use_gpu\n",
+    "                else [\"CPUExecutionProvider\"],\n",
+    "            )\n",
+    "\n",
+    "        if model == \"sepaelv2\":\n",
+    "            self.ort_fiqa = onnxruntime.InferenceSession(\n",
+    "                osp.join(\n",
+    "                    osp.expanduser(\"~/.insightface/models\"),\n",
+    "                    model,\n",
+    "                    \"cr_fiqa\",\n",
+    "                    \"cr_fiqa_l.onnx\",\n",
     "                ),\n",
     "                providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
     "                if use_gpu\n",
@@ -293,6 +308,10 @@
     "                },\n",
     "            }\n",
     "\n",
+    "        if self.model == \"sepaelv2\":\n",
+    "            _, fiqa_score = self.ort_fiqa.run(None, ada_inputs)\n",
+    "            ret = {**ret, \"fiqa_score\": fiqa_score[0][0]}\n",
+    "\n",
     "        return ret\n",
     "\n",
     "    def process_image(self, imgpath):\n",
@@ -399,6 +418,11 @@
     "                    **{\"magface_embedding\": mag_embedding, \"magface_norm\": mag_norm},\n",
     "                }\n",
     "\n",
+    "            if self.model == \"sepaelv2\":\n",
+    "                _, fiqa_score = self.ort_fiqa.run(None, ada_inputs)\n",
+    "                face_ret = {**face_ret, \"fiqa_score\": fiqa_score[0][0]}\n",
+    "                \n",
+    "\n",
     "            ret.append(face_ret)\n",
     "        return ret\n"
    ]
@@ -430,25 +454,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff.process_image_single_face(\"001_frontal.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll']),\n",
-       " array([[471.42743, 418.60498],\n",
-       "        [522.68933, 418.05362],\n",
-       "        [498.82196, 449.08923],\n",
-       "        [479.3499 , 476.44193],\n",
-       "        [514.33453, 476.06885]], dtype=float32),\n",
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
+       " array([[471.42807, 418.60446],\n",
+       "        [522.6901 , 418.05377],\n",
+       "        [498.82306, 449.08896],\n",
+       "        [479.34985, 476.44186],\n",
+       "        [514.3342 , 476.06934]], dtype=float32),\n",
        " array([441, 355, 548, 506]))"
       ]
      },
@@ -753,7 +777,7 @@
     "        every_n_frames (int, optional): Extract faces from every n-th frame. Default is 1 (extract faces from all frames).\n",
     "        margin (float, optional): The factor by which the detected face bounding box should be extended. Default is 2.0.\n",
     "        start_from (float, optional): The time point (in seconds) after which the video frames should be processed. Default is 0.0.\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
     "        The number of extracted faces.\n",
     "    \"\"\"\n",
